# IP_chat_my

Test_Chat/: CMakeLists.txt  setup_network.sh
Test_Chat/src/: chat.cpp  chat.h  main.cpp
